# swupd-server

./: .gitignore  .travis.yml  Cargo.toml  README.md  design
tests/: 10.json  20.json
tests/20/usr/lib/tmpfiles.d/: filesystem.conf
tests/20/usr/share/defaults/etc/: nsswitch.conf
tests/20/usr/share/defaults/etc/profile.d/: 50-colors.sh
