[package]
name = "swupd"
version = "0.1.0"
authors = ["William Douglas <william.douglas@intel.com>"]
license = "GPL-3.0+"
description = "swupd"
readme = "README.md"

[[bin]]
name = "swupd-server"
path = "src/bin/swupd-server.rs"

[dependencies]
byteorder = "1"
clap = "2"
colored = "1"
env_logger = "0.4"
error-chain = "0.10"
flate2 = "0.2"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.3"
memmap = "0.5"
nix = "0.9"
ring = "0.12"
rusqlite = "0.12"
rust-lzma = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
tar = "0.4"
walkdir = "1"
